堆空间分配思想 堆空间分配策略 大对象分配代码测试